--- a/Website/css/site.css
+++ b/Website/css/site.css
@@ -4,7 +4,7 @@ body {
 	font-size: 65%;
 	color: black;
 }
-fieldset { 
+fieldset {
 	padding: .5em 0;
 	border: 0;
 }
@@ -27,11 +27,11 @@ a.theme:hover, a.theme:focus {
 a.theme:active {
 	color: #7EB744;
 }
-form textarea, 
-form select, 
+form textarea,
+form select,
 form input {
-	background-color: #edfae1;
-	border: 1px solid #92BF60;
+	background-color: beige;
+	border: 1px solid goldenrod;
 }
 
 .center {
@@ -339,12 +339,12 @@ div.grippie {
 }
 
 /*	CSS for customized radio buttons and check boxes */
-	
+
 /*	wrapper divs */
 .custom-checkbox, .custom-radio { position: relative; }
-	
+
 /* input, label positioning */
-.custom-checkbox input, 
+.custom-checkbox input,
 .custom-radio input {
 	position: absolute;
 	left: 2px;
@@ -353,7 +353,7 @@ div.grippie {
 	z-index: 0;
 }
 
-.custom-checkbox label, 
+.custom-checkbox label,
 .custom-radio label {
 	display: block;
 	position: relative;
@@ -368,7 +368,7 @@ div.grippie {
 	float: left;
 }
 
-	
+
 /* states */
 .custom-checkbox label { background: url(images/checkbox.gif) no-repeat; }
 
@@ -385,17 +385,17 @@ div.grippie {
 	background-position: -10px -114px;
 }
 
-.custom-checkbox label.checked, 
+.custom-checkbox label.checked,
 .custom-radio label.checked {
 	background-position: -10px -214px;
 }
 
-.custom-checkbox label.checkedHover, 
+.custom-checkbox label.checkedHover,
 .custom-checkbox label.checkedFocus {
 	background-position: -10px -314px;
 }
 
-.custom-checkbox label.focus, 
+.custom-checkbox label.focus,
 .custom-radio label.focus {
 	outline: 1px dotted #ccc;
 }
